--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ header .subtitle { animation-delay: 1.2s; }
 .subtitle-box {
   text-align: center;
   padding: 25px 30px;
-  border: 2px solid #6b4a2b;
+  border: 2px solid #000;
   border-radius: 25px;
   max-width: 900px;
   margin: 40px auto;
@@ -1357,6 +1357,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 
 </script>
+
 
 
 
