--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ header .subtitle { animation-delay: 1.2s; }
   background-position: center;
   background-repeat: no-repeat;
   border-radius: 20px;
-  border: 2px solid rgba(107, 74, 43, 0.3);
+  border: 2px solid #000;
   box-shadow: 0 4px 16px rgba(0,0,0,0.08);
   font-family: 'Cinzel', serif;
   color: #6b4a2b;
@@ -1388,6 +1388,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
