--- a/index.html
+++ b/index.html
@@ -952,6 +952,10 @@ label {
 html {
   scroll-behavior: smooth;
 }
+  .subtitle-box p + p {
+  margin-top: 15px; /* separa solo los párrafos consecutivos */
+}
+
 
 
 
@@ -1000,11 +1004,16 @@ html {
     
    <div class="subtitle-box">
   <p class="subtitle">
-    ¡Bienvenidos a nuestro espacio de boda! Nos hace una enorme ilusión que nos acompañéis en este momento tan especial de nuestras vidas.
-    Aquí podréis compartir con nosotros vuestras preferencias para que todo esté perfecto y también encontrar toda la información sobre la celebración.
+    ¡Bienvenidos a nuestro espacio de boda!
+  </p>
+  <p class="subtitle">
+    Nos hace una enorme ilusión que nos acompañéis en este momento tan especial de nuestras vidas.
+    Aquí podréis compartir con nosotros vuestras preferencias para que todo esté perfecto
+    y también encontrar toda la información sobre la celebración.
     ¡Gracias de corazón por formar parte de nuestra historia!
   </p>
 </div>
+
 
     <!-- Foto -->
     <div class="boda-foto">
@@ -1452,6 +1461,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
