--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body {
   font-family: 'Lora', serif;
   color: var(--ink);
   overflow-x: hidden;
-  animation: fadeIn 4s ease-in-out;
+  animation: fadeIn 2.5s ease-in-out;
 }
 
     @keyframes fadeIn {
@@ -110,10 +110,11 @@ header .subtitle { animation-delay: 1.2s; }
 
 
 
-    @keyframes fadeUp {
-      from { opacity: 0; transform: translateY(40px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
+   @keyframes fadeUp {
+  from { opacity: 0; transform: scale(0.98); } /* leve zoom suave */
+  to { opacity: 1; transform: scale(1); }
+}
+
 
 .title {
   font-family: 'Cinzel', serif;
@@ -1461,6 +1462,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
