--- a/index.html
+++ b/index.html
@@ -122,14 +122,17 @@ header .subtitle { animation-delay: 1.2s; }
   letter-spacing: 3px;
   color: #6b4a2b;
   font-weight: 700;
-  display: inline-block;
   position: relative;
-  padding-bottom: 10px;
+  display: inline-block;
+  text-align: center;
+  padding: 10px 60px;
+  line-height: 1.2;
 }
 
+/* símbolos ❦ a los lados */
 .title::before,
 .title::after {
-  content: "❦"; /* símbolo decorativo */
+  content: "❦";
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -139,28 +142,30 @@ header .subtitle { animation-delay: 1.2s; }
 }
 
 .title::before {
-  left: -30px;
+  left: 15px;
 }
+
 .title::after {
-  right: -30px;
-}
-    title::after,
-.title::before {
-  font-size: 24px;
+  right: 15px;
 }
 
-/* línea decorativa independiente debajo del título */
-.title::after,
-.title::before {
-  /* mantenemos los símbolos ❦ arriba */
+/* ampersand (&) centrada y elegante */
+.title .amp {
+  font-family: 'Great Vibes', cursive;
+  font-size: 48px;
+  color: #a46a3a;
+  display: inline-block;
+  line-height: 1;
+  margin: 4px 0;
 }
 
+/* línea decorativa debajo del título */
 .title-line {
-  width: 80%;                /* ligeramente más corto que el texto */
-  max-width: 250px;          /* se adapta a pantallas pequeñas */
+  width: 80%;
+  max-width: 250px;
   height: 2px;
-  background-color: #6b4a2b; /* mismo tono que el texto */
-  margin: 12px auto 0;       /* espacio justo debajo del título */
+  background-color: #6b4a2b;
+  margin: 12px auto 0;
   border-radius: 2px;
 }
 
@@ -984,8 +989,12 @@ html {
   <div id="page-wrapper">
 
   <header>
-  <h1 class="title">Alejandro & Andrea</h1>
-  <div class="title-line"></div>
+ <h1 class="title">
+  Alejandro<br>
+  <span class="amp">&amp;</span><br>
+  Andrea
+</h1>
+
 </header>
 
     <!-- Cuenta atrás -->
@@ -1462,6 +1471,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
