--- a/index.html
+++ b/index.html
@@ -979,14 +979,13 @@ html {
   <div id="page-wrapper">
 
  <header>
-  <h1 class="title">
-    Alejandro<br>
-    &amp;<br>
-    Andrea
-  </h1>
-</header>
-
-
+      <h1 class="title">
+        Alejandro
+         <h1 class="title">
+        &
+         <h1 class="title">
+        Andrea</h1>
+    </header>
 
     <!-- Cuenta atrás -->
     <section class="countdown-section">
@@ -1462,6 +1461,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
