--- a/index.html
+++ b/index.html
@@ -978,13 +978,8 @@ html {
   <!-- 💫 CONTENEDOR PRINCIPAL -->
   <div id="page-wrapper">
 
- <header>
-      <h1 class="title">
-        Alejandro
-         <h1 class="title">
-        &
-         <h1 class="title">
-        Andrea</h1>
+    <header>
+      <h1 class="title">Alejandro & Andrea</h1>
     </header>
 
     <!-- Cuenta atrás -->
@@ -1461,6 +1456,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
