--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ header .subtitle { animation-delay: 1.2s; }
 }
 
 
-title { 
+.title { 
   font-family: 'Cinzel', serif;
   font-size: 36px;
   letter-spacing: 3px;
@@ -1456,6 +1456,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
