--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@ header .subtitle { animation-delay: 1.2s; }
       height: 2px; 
       background-color: #6b4a2b; /* mismo tono que el texto */ 
       margin: 12px auto 0; /* espacio justo debajo del título */
-      border-radius: 2px; }
+      border-radius: 2px; 
+    }
 
 
     .subtitle {
@@ -1456,6 +1457,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
