--- a/index.html
+++ b/index.html
@@ -980,8 +980,10 @@ html {
   <div id="page-wrapper">
 
     <header>
-      <h1 class="title">Alejandro & Andrea</h1>
-    </header>
+        <div class="title-line"></div>
+  <h1 class="title">Alejandro & Andrea</h1>
+  <div class="title-line"></div>
+</header>
 
     <!-- Cuenta atrás -->
     <section class="countdown-section">
@@ -1457,6 +1459,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
