--- a/index.html
+++ b/index.html
@@ -979,8 +979,13 @@ html {
   <!-- 💫 CONTENEDOR PRINCIPAL -->
   <div id="page-wrapper">
 
-    <header>
-  <h1 class="title">Alejandro & Andrea</h1>
+   <header>
+  <div class="title-line"></div>
+  <h1 class="title">
+    Alejandro<br>
+    &<br>
+    Andrea
+  </h1>
   <div class="title-line"></div>
 </header>
 
@@ -1458,6 +1463,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
