--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ header .subtitle { animation-delay: 1.2s; }
   width: 100%;                /* 🔹 ocupan todo el ancho del contenedor */
   padding: 30px 20px;
   border-radius: 20px;
-  border: 2px solid rgba(107, 74, 43, 0.3);
+  border: 2px solid #000;
   background:
     linear-gradient(rgba(255,255,255,0.85), rgba(255,255,255,0.25)),
     url("mi_foto_boda_v37.png"); /* 🔹 misma imagen decorativa */
@@ -1463,6 +1463,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
