--- a/index.html
+++ b/index.html
@@ -472,7 +472,9 @@ header .subtitle { animation-delay: 1.2s; }
     .modal.show { opacity: 1; visibility: visible; }
 
    .modal-content {
-  background: rgba(248,229,216,0.97);
+ background:
+    linear-gradient(rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.25)),
+    url("mi_foto_boda_v37.png");
   border-radius: 16px;
   padding: 30px 25px;
   max-width: 600px;
@@ -547,8 +549,9 @@ header .subtitle { animation-delay: 1.2s; }
 
 
 #asistenciaModal .asistencia-content {
-  background: rgba(248,229,216,0.80); /* crema semitransparente */
-  border-radius: 12px;
+ background:
+    linear-gradient(rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.25)),
+    url("mi_foto_boda_v37.png");
   max-width: 600px;
   width: 100%;
   max-height: 90%;
@@ -1462,6 +1465,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
