--- a/index.html
+++ b/index.html
@@ -531,6 +531,7 @@ header .subtitle { animation-delay: 1.2s; }
   align-items: center;
   padding: 20px;
   box-sizing: border-box;
+  border-radius: 16px;
 
   /* Fondo oscuro translúcido con desenfoque */
   background: rgba(0, 0, 0, 0.45);
@@ -1465,6 +1466,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
