--- a/index.html
+++ b/index.html
@@ -519,48 +519,26 @@ header .subtitle { animation-delay: 1.2s; }
     }
 
     .close-btn img { width: 28px; }
-    /* === ESTILO FINAL DEL FORMULARIO DE ASISTENCIA === */
-/* === MODAL ASISTENCIA === */
-/* === MODAL ASISTENCIA (mismo fondo que los demás) === */
-#asistenciaModal {
-  position: fixed;
-  z-index: 1000;
-  inset: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-  box-sizing: border-box;
-  border-radius: 16px;
-
-  /* Fondo oscuro translúcido con desenfoque */
-  background: rgba(0, 0, 0, 0.45);
-  backdrop-filter: blur(6px);
-  -webkit-backdrop-filter: blur(6px);
-
-  transition: opacity 0.4s ease, visibility 0.4s ease;
-  opacity: 0;
-  visibility: hidden;
-}
-
-#asistenciaModal.show {
-  opacity: 1;
-  visibility: visible;
-}
-
 
 #asistenciaModal .asistencia-content {
- background:
+  background:
     linear-gradient(rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.25)),
     url("mi_foto_boda_v37.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  border-radius: 16px; /* ✅ esquinas redondeadas */
   max-width: 600px;
   width: 100%;
   max-height: 90%;
   overflow-y: auto;
   position: relative;
   padding: 20px;
-  border: 2px solid #000000; /* ⚫ borde negro */
+  border: 2px solid #000;
+  box-shadow: 0 8px 24px rgba(0,0,0,0.25);
 }
+
 
 /* === Título del modal === */
 .asistencia-title {
@@ -1466,6 +1444,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
