--- a/index.html
+++ b/index.html
@@ -934,46 +934,56 @@ html {
   .subtitle-box p + p {
   margin-top: 15px; /* separa solo los párrafos consecutivos */
 }
-  /* === 💻 AJUSTES PARA PANTALLAS GRANDES (ESCRITORIO) === */
+/* === 💻 VERSIÓN DESKTOP MEJORADA === */
 @media (min-width: 901px) {
 
-  body {
+  /* Contenido centrado y ancho máximo */
+  #page-wrapper {
     max-width: 1200px;
     margin: 0 auto;
+    padding: 0 20px;
   }
 
   header {
-    margin-top: 80px;
+    margin-top: 100px;
+    text-align: center;
   }
 
   .title {
-    font-size: 52px;
-    letter-spacing: 4px;
-  }
-
-  .title-line {
-    max-width: 320px;
+    font-size: 56px;
   }
 
   .subtitle-box {
     max-width: 800px;
+    margin: 60px auto;
     padding: 40px 60px;
-    font-size: 20px;
+    font-size: 22px;
   }
 
   .subtitle {
-    font-size: 24px;
+    font-size: 22px;
     line-height: 1.8;
   }
 
   .boda-foto {
-    max-width: 900px;
+    display: flex;
+    justify-content: center;
     margin: 60px auto;
+    max-width: 700px;
+    border-radius: 20px;
+    overflow: hidden;
+  }
+
+  .boda-foto img {
+    width: 100%;
+    height: auto;
+    border-radius: 20px;
+    object-fit: cover;
   }
 
   .date-box {
+    font-size: 28px;
     padding: 40px 70px;
-    font-size: 26px;
   }
 
   .countdown-section {
@@ -982,40 +992,62 @@ html {
   }
 
   #countdown {
+    justify-content: center;
     gap: 70px;
   }
 
+  /* === BOTONES MODALES EN 2 FILAS ORDENADAS === */
   .icon-container {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    max-width: 1000px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* 2 columnas */
     gap: 40px;
+    justify-items: center;
+    align-items: stretch;
+    max-width: 900px;
+    margin: 80px auto;
   }
 
   .icon-button {
-    flex: 1 1 45%;
+    width: 100%;
     max-width: 400px;
     padding: 40px 30px;
+    border-radius: 25px;
+    border: 2px solid #000;
+    background:
+      linear-gradient(rgba(255,255,255,0.85), rgba(255,255,255,0.25)),
+      url("mi_foto_boda_v37.png");
+    background-size: cover;
+    background-position: center;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+
+  .icon-button:hover {
+    transform: translateY(-6px);
+    box-shadow: 0 8px 24px rgba(0,0,0,0.2);
+  }
+
+  .icon-img {
+    width: 80px;
+    margin-bottom: 12px;
   }
 
   .icon-button span {
     font-size: 20px;
   }
 
+  footer {
+    text-align: center;
+    margin: 60px 0 30px;
+    font-size: 15px;
+  }
+
+  /* Botón hamburguesa */
   .menu-toggle {
-    top: 30px;
+    top: 25px;
     right: 50px;
     transform: scale(1.1);
   }
-
-  footer {
-    font-size: 14px;
-    margin-bottom: 30px;
-  }
 }
-
-
 
 
 
@@ -1539,6 +1571,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
