--- a/index.html
+++ b/index.html
@@ -32,12 +32,26 @@
     * { box-sizing: border-box; margin: 0; padding: 0; }
 
 body {
-  background: radial-gradient(circle at top center, #f1e8d7 0%, #f0e1cc 40%, #e8d3b8 100%);
-  font-family: 'Lora', serif;
-  color: var(--ink);
-  overflow-x: hidden;
-  animation: fadeIn 2.5s ease-in-out;
+  background-color: #f6f4ef; /* blanco sucio */
+
+  /* viñeta + ruido sutil */
+  background-image:
+    radial-gradient(1100px 700px at 50% -10%, rgba(0,0,0,0.06), rgba(0,0,0,0) 60%),
+    url("data:image/svg+xml;utf8,\
+<svg xmlns='http://www.w3.org/2000/svg' width='200' height='200'>\
+<filter id='n'>\
+<feTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='4' stitchTiles='stitch'/>\
+<feColorMatrix type='saturate' values='0'/>\
+<feComponentTransfer><feFuncA type='table' tableValues='0 0.07'/></feComponentTransfer>\
+</filter>\
+<rect width='100%' height='100%' filter='url(#n)'/>\
+</svg>");
+  background-repeat: no-repeat, repeat;
+  background-size: cover, 300px 300px; /* tamaño del “grano” */
+  background-attachment: fixed, scroll;
+  background-blend-mode: multiply, normal;
 }
+
 
     @keyframes fadeIn {
       0% { opacity: 0; transform: translateY(30px); }
@@ -1456,6 +1470,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
