--- a/index.html
+++ b/index.html
@@ -141,26 +141,70 @@ header .subtitle { animation-delay: 1.2s; }
   position: relative;
   padding-bottom: 10px;
 } 
-  .title::before,
-  .title::after { 
-    content: "❦"; /* símbolo decorativo */
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 26px;
-    color: #a46a3a;
-    opacity: 0.7;
-  } 
-    .title::before {
-      left: -30px; 
-    } 
-    .title::after { 
-      right: -30px; 
-    } 
-    title::after, 
-    .title::before  {
-      font-size: 24px;
-      }
+.title::before,
+.title::after {
+  content: none;
+}
+
+/* Contenedor relativo para ubicar las ramas */
+header {
+  position: relative;
+}
+
+/* Ramas de olivo */
+header .olive {
+  position: absolute;
+  top: -10px; /* 🔹 súbelo o bájalo según lo quieras */
+  width: 140px;
+  height: 70px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  opacity: 0.9;
+  pointer-events: none;
+  z-index: 1;
+}
+
+/* Izquierda */
+header .olive.left {
+  left: -40px;
+  background-image: url("data:image/svg+xml;utf8,\
+<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 160 80'>\
+<g fill='none' stroke='%236b4a2b' stroke-width='3' stroke-linecap='round' stroke-linejoin='round'>\
+  <path d='M150,70 C110,40 75,35 20,45'/>\
+  <path d='M35,48 c-8,-2 -18,1 -25,7 c7,2 17,0 25,-7z' fill='%23a46a3a'/>\
+  <path d='M55,44 c-7,-3 -17,-1 -24,4 c7,3 16,2 24,-4z' fill='%23a46a3a'/>\
+  <path d='M75,42 c-7,-3 -16,-2 -23,3 c7,3 15,3 23,-3z' fill='%23a46a3a'/>\
+  <path d='M95,43 c-6,-3 -15,-3 -21,2 c6,3 14,4 21,-2z' fill='%23a46a3a'/>\
+  <path d='M115,50 c-6,-4 -15,-5 -20,0 c6,4 13,6 20,0z' fill='%23a46a3a'/>\
+</g></svg>");
+}
+
+/* Derecha (la misma rama espejada) */
+header .olive.right {
+  right: -40px;
+  transform: scaleX(-1);
+  background-image: url("data:image/svg+xml;utf8,\
+<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 160 80'>\
+<g fill='none' stroke='%236b4a2b' stroke-width='3' stroke-linecap='round' stroke-linejoin='round'>\
+  <path d='M150,70 C110,40 75,35 20,45'/>\
+  <path d='M35,48 c-8,-2 -18,1 -25,7 c7,2 17,0 25,-7z' fill='%23a46a3a'/>\
+  <path d='M55,44 c-7,-3 -17,-1 -24,4 c7,3 16,2 24,-4z' fill='%23a46a3a'/>\
+  <path d='M75,42 c-7,-3 -16,-2 -23,3 c7,3 15,3 23,-3z' fill='%23a46a3a'/>\
+  <path d='M95,43 c-6,-3 -15,-3 -21,2 c6,3 14,4 21,-2z' fill='%23a46a3a'/>\
+  <path d='M115,50 c-6,-4 -15,-5 -20,0 c6,4 13,6 20,0z' fill='%23a46a3a'/>\
+</g></svg>");
+}
+
+/* Responsive: más pequeñas en móvil */
+@media (max-width: 600px) {
+  header .olive {
+    width: 110px;
+    height: 55px;
+    top: -6px;
+  }
+  header .olive.left  { left: -20px; }
+  header .olive.right { right: -20px; }
+}
     
     /* línea decorativa independiente debajo del título */
     .title::after,
@@ -1471,6 +1515,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
