--- a/index.html
+++ b/index.html
@@ -131,28 +131,20 @@ header .subtitle { animation-delay: 1.2s; }
 }
 
 
-.title { 
-  font-family: 'Cinzel', serif;
-  font-size: 36px;
-  letter-spacing: 3px;
-  color: #6b4a2b;
-  font-weight: 700;
-  display: inline-block;
-  position: relative;
-  padding-bottom: 10px;
-  padding-top: 44px;      /* 👈 deja espacio para las ramas */
-  z-index: 2;             /* el texto queda por encima */
+/* Imagen de título con ramas */
+.title-img {
+  display: block;
+  width: 90%;           /* Ajusta el ancho relativo */
+  max-width: 380px;     /* Tamaño máximo similar al título */
+  margin: 0 auto 12px;  /* centrado y pequeño margen inferior */
+  opacity: 0.95;        /* misma suavidad visual */
+  animation: textFadeIn 2s ease forwards; /* mantiene la animación */
 }
 
-    
-    .title-line {
-      width: 80%; /* ligeramente más corto que el texto */
-      max-width: 250px; /* se adapta a pantallas pequeñas */
-      height: 2px; 
-      background-color: #6b4a2b; /* mismo tono que el texto */ 
-      margin: 12px auto 0; /* espacio justo debajo del título */
-      border-radius: 2px; 
-    }
+@media (max-width: 600px) {
+  .title-img {
+    max-width: 280px;   /* tamaño más pequeño en móvil */
+  }
 
 
     .subtitle {
@@ -953,12 +945,9 @@ html {
   <div id="page-wrapper">
 
    <header>
-  <h1 class="title">
-    Alejandro<br>
-    &<br>
-    Andrea
-  </h1>
-  <div class="title-line"></div>
+<img src="mi_foto_boda_v40.png" alt="Alejandro & Andrea" class="title-img">
+<div class="title-line"></div>
+
 </header>
 
     <!-- Cuenta atrás -->
@@ -1449,6 +1438,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
