--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ header .subtitle { animation-delay: 1.2s; }
     .subtitle {
      font-family: 'Playfair Display', serif;
       font-size: 22px;
-      color: #5a4b2b;
+      color: #000;
       line-height: 1.6;
       max-width: 800px;
       margin: 0 auto;
@@ -189,7 +189,7 @@ header .subtitle { animation-delay: 1.2s; }
   font-family: 'Cinzel', serif;     /* misma fuente que Día de la boda */
   font-size: 28px;                  /* tamaño equilibrado */
   font-weight: 700;
-  color: #6b4a2b;                   /* mismo tono marrón dorado */
+  color: #000;                   /* mismo tono marrón dorado */
   letter-spacing: 3px;              /* misma separación elegante */
   margin-bottom: 20px;
 }
@@ -209,7 +209,7 @@ header .subtitle { animation-delay: 1.2s; }
   align-items: center;
   position: relative;
   font-family: 'Cinzel', serif;
-  color: #6b4a2b;
+  color: #000;
   text-align: center;
 }
 
@@ -234,7 +234,7 @@ header .subtitle { animation-delay: 1.2s; }
   text-transform: uppercase;
   font-weight: 600;
   margin-top: 6px;
-  color: #6b4a2b;
+  color: #000;
 }
 
 /* puntos separadores */
@@ -245,7 +245,7 @@ header .subtitle { animation-delay: 1.2s; }
   top: 25%;
   transform: translateY(-50%);
   font-size: 28px; /* 🔹 más fino */
-  color: #6b4a2b;
+  color: #000;
   font-weight: 400;
 }
 
@@ -288,7 +288,7 @@ header .subtitle { animation-delay: 1.2s; }
   border: 2px solid #000;
   box-shadow: 0 4px 16px rgba(0,0,0,0.08);
   font-family: 'Cinzel', serif;
-  color: #6b4a2b;
+  color: #000;
   text-align: center;
   letter-spacing: 3px;
   width: fit-content;
@@ -299,7 +299,7 @@ header .subtitle { animation-delay: 1.2s; }
   font-size: 25px;
   font-weight: 700;
   letter-spacing: 6px;
-  color: #6b4a2b;
+  color: #000;
   text-shadow: 1px 1px 3px rgba(255,255,255,0.6);
 }
 
@@ -316,7 +316,7 @@ header .subtitle { animation-delay: 1.2s; }
   font-family: 'Cinzel', serif;
   font-size: 15px;
   font-weight: 700;
-  color: #6b4a2b;
+  color: #000;
   text-align: center;
   letter-spacing: 3px;
   margin-top: 10px;    /* pequeño espacio debajo del recuadro */
@@ -425,7 +425,8 @@ header .subtitle { animation-delay: 1.2s; }
       text-align: center;
       font-family: 'Playfair Display', serif;
       font-size: 18px;
-      color: #5a4b2b;
+      font-weight: 700;
+      color: #000;
       margin: 40px 20px;
       line-height: 1.6;
       animation: fadeUp 4s ease-in-out;
@@ -435,6 +436,7 @@ header .subtitle { animation-delay: 1.2s; }
       text-align: center;
       padding: 20px;
       font-size: 13px;
+      font-weight: 700;
       color: #000;
       opacity: 0.8;
       animation: fadeUp 4s ease-in-out;
@@ -1439,6 +1441,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 </script>
+
 
 
 
